--- a/UpdateFlymeStyle/app/src/main/res/values/strings.xml
+++ b/UpdateFlymeStyle/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
 
     <string name="app_name">Update Flyme Style</string>
     <string name="title_app">♡♡♡ Selamat Datang ♡♡♡</string>
-	<string name="deskripsi_app">Ini Adalah proyek lanjutan dari <b>Flyme Style</b> sebelumnya, Karena aplikasi yang pertama tidak saya clone jadi terpaksa harus membuatnya lagi dari awal, tapi tidak apa-apa bagi saya. Aplikasi ini juga berisi Flyme Style dari saya dan ada juga tambahan dari teman-teman yang lainnya.</string>
-	
-	
+	<string name="deskripsi_app">Ini Adalah proyek lanjutan dari <b>Flyme Style</b> sebelumnya, Karena <u>Aplikasi</u> yang pertama tidak saya clone jadi terpaksa harus membuatnya lagi dari awal, tapi tidak apa-apa bagi saya. Aplikasi ini juga berisi <b>Flyme Style</b> dari saya dan ada juga tambahan dari teman-teman yang lainnya.</string>
+	<string name="title_page_00">Flyme UI 00</string>
+	<string name="title_page_01">Flyme UI 01</string>
 	
 	
 	
