--- a/UpdateFlymeStyle/app/src/main/res/values/strings.xml
+++ b/UpdateFlymeStyle/app/src/main/res/values/strings.xml
@@ -6,7 +6,15 @@
 	<string name="deskripsi_app">Ini Adalah proyek lanjutan dari <b>Flyme Style</b> sebelumnya, Karena <u>Aplikasi</u> yang pertama tidak saya clone jadi terpaksa harus membuatnya lagi dari awal, tapi tidak apa-apa bagi saya. Aplikasi ini juga berisi <b>Flyme Style</b> dari saya dan ada juga tambahan dari teman-teman yang lainnya.</string>
 	<string name="title_page_00">Flyme UI 00</string>
 	<string name="title_page_01">Flyme UI 01</string>
-	
-	
+	<!-- 24-August-2020 -->
+	<string name="title_page_02">Flyme UI 02</string>
+	<string name="title_page_03">Flyme UI 03</string>
+	<string name="title_page_04">Flyme UI 04</string>
+	<string name="title_page_05">Flyme UI 05</string>
+	<string name="title_page_06">Flyme UI 06</string>
+	<string name="title_page_07">Flyme UI 07</string>
+	<string name="title_page_08">Flyme UI 08</string>
+	<string name="title_page_09">Flyme UI 09</string>
+	<string name="title_page_10">Flyme UI 10</string>
 	
 </resources>
