--- a/UpdateFlymeStyle/app/src/main/res/values/strings.xml
+++ b/UpdateFlymeStyle/app/src/main/res/values/strings.xml
@@ -18,4 +18,13 @@
 	<string name="title_page_10">Flyme UI 10</string>
 	<!-- 29-Agustus-->
 	<string name="title_cara_install">Cara Install</string>
+	<string name="flyme_style_00">Flyme Style 00</string>
+	<string name="flyme_style_01">Flyme Style 01</string>
+	<string name="flyme_style_02">Flyme Style 02</string>
+	<string name="flyme_style_03">Flyme Style 03</string>
+	<string name="flyme_style_04">Flyme Style 04</string>
+	<string name="flyme_style_05">Flyme Style 05</string>
+	
+	
+	
 </resources>
